--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.15.14",
+        "@mui/x-charts": "^7.0.0",
         "@mui/x-data-grid": "^7.0.0",
+        "axios": "^1.6.8",
         "react": "^17.0.0 || ^18.0.0",
         "react-dom": "^17.0.0 || ^18.0.0",
         "react-hook-form": "^7.51.1",
