--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@auth-kit/react-router": "^3.1.3",
         "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.15.14",
+        "@emotion/styled": "^11.11.5",
+        "@mui/icons-material": "^5.15.17",
+        "@mui/material": "^5.15.17",
         "@mui/x-charts": "^7.0.0",
         "@mui/x-data-grid": "^7.0.0",
         "axios": "^1.6.8",
         "react": "^17.0.0 || ^18.0.0",
+        "react-auth-kit": "^3.1.3",
         "react-dom": "^17.0.0 || ^18.0.0",
         "react-hook-form": "^7.51.1",
+        "react-infinite-scroll-component": "^6.1.0",
+        "react-infinite-scroller": "^1.2.6",
+        "uuid": "^9.0.1",
         "zustand": "^4.5.2"
     },
     "devDependencies": {
