--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
         "@mui/x-charts": "^7.0.0",
         "@mui/x-data-grid": "^7.0.0",
         "axios": "^1.6.8",
+        "js-cookie": "^3.0.5",
         "react": "^17.0.0 || ^18.0.0",
         "react-auth-kit": "^3.1.3",
         "react-dom": "^17.0.0 || ^18.0.0",
         "react-hook-form": "^7.51.1",
         "react-infinite-scroll-component": "^6.1.0",
         "react-infinite-scroller": "^1.2.6",
+        "styled-components": "^6.1.11",
         "uuid": "^9.0.1",
         "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@playwright/test": "^1.42.1",
+        "@types/js-cookie": "^3.0.6",
         "@types/node": "^20.11.28",
         "@types/react": "^18.2.56",
         "@types/react-dom": "^18.2.19",
@@ -40,7 +43,8 @@
         "eslint-plugin-react-refresh": "^0.4.5",
         "react-router-dom": "^6.22.3",
         "typescript": "^5.2.2",
-        "vite": "^5.1.4"
+        "vite": "^5.1.4",
+        "vite-plugin-mkcert": "^1.17.5"
     },
     "peerDependencies": {
         "react": "^17.0.0 || ^18.0.0",
